--- a/ua/libuamappings/Makefile.in
+++ b/ua/libuamappings/Makefile.in
@@ -103,10 +103,10 @@ am_libopcuabinary_a_OBJECTS =  \
 	libopcuabinary_a-binary_raw_size.$(OBJEXT) \
 	libopcuabinary_a-binary_stream.$(OBJEXT) \
 	libopcuabinary_a-binary_attribute.$(OBJEXT) \
-	libopcuabinary_a-nodeid.$(OBJEXT) \
 	libopcuabinary_a-binary_view.$(OBJEXT) \
 	libopcuabinary_a-binary_session.$(OBJEXT) \
-	libopcuabinary_a-binary_secure_channel.$(OBJEXT)
+	libopcuabinary_a-binary_secure_channel.$(OBJEXT) \
+	libopcuabinary_a-nodeid.$(OBJEXT)
 libopcuabinary_a_OBJECTS = $(am_libopcuabinary_a_OBJECTS)
 am__EXEEXT_1 = opc_ua_binary_test$(EXEEXT)
 am_opc_ua_binary_test_OBJECTS =  \
@@ -311,6 +311,7 @@ opcuainclude_HEADERS = \
   include/opc/ua/protocol/view.h \
   include/opc/ua/protocol/session.h \
   include/opc/ua/protocol/data_value.h \
+  include/opc/ua/describe.h \
   include/opc/ua/extension_identifiers.h \
   include/opc/ua/attribute_ids.h \
   include/opc/ua/channel.h \
@@ -331,10 +332,10 @@ libopcuabinary_a_SOURCES = \
   src/binary_raw_size.cpp \
   src/binary_stream.cpp \
   src/binary_attribute.cpp \
-  src/nodeid.cpp \
   src/binary_view.cpp \
   src/binary_session.cpp \
-  src/binary_secure_channel.cpp
+  src/binary_secure_channel.cpp \
+  src/nodeid.cpp
 
 libopcuabinary_a_CPPFLAGS = -I$(top_srcdir)/include 
 opc_ua_binary_test_SOURCES = \
@@ -603,20 +604,6 @@ libopcuabinary_a-binary_attribute.obj: src/binary_attribute.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libopcuabinary_a-binary_attribute.obj `if test -f 'src/binary_attribute.cpp'; then $(CYGPATH_W) 'src/binary_attribute.cpp'; else $(CYGPATH_W) '$(srcdir)/src/binary_attribute.cpp'; fi`
 
-libopcuabinary_a-nodeid.o: src/nodeid.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libopcuabinary_a-nodeid.o -MD -MP -MF $(DEPDIR)/libopcuabinary_a-nodeid.Tpo -c -o libopcuabinary_a-nodeid.o `test -f 'src/nodeid.cpp' || echo '$(srcdir)/'`src/nodeid.cpp
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libopcuabinary_a-nodeid.Tpo $(DEPDIR)/libopcuabinary_a-nodeid.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/nodeid.cpp' object='libopcuabinary_a-nodeid.o' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libopcuabinary_a-nodeid.o `test -f 'src/nodeid.cpp' || echo '$(srcdir)/'`src/nodeid.cpp
-
-libopcuabinary_a-nodeid.obj: src/nodeid.cpp
-@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libopcuabinary_a-nodeid.obj -MD -MP -MF $(DEPDIR)/libopcuabinary_a-nodeid.Tpo -c -o libopcuabinary_a-nodeid.obj `if test -f 'src/nodeid.cpp'; then $(CYGPATH_W) 'src/nodeid.cpp'; else $(CYGPATH_W) '$(srcdir)/src/nodeid.cpp'; fi`
-@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libopcuabinary_a-nodeid.Tpo $(DEPDIR)/libopcuabinary_a-nodeid.Po
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/nodeid.cpp' object='libopcuabinary_a-nodeid.obj' libtool=no @AMDEPBACKSLASH@
-@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
-@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libopcuabinary_a-nodeid.obj `if test -f 'src/nodeid.cpp'; then $(CYGPATH_W) 'src/nodeid.cpp'; else $(CYGPATH_W) '$(srcdir)/src/nodeid.cpp'; fi`
-
 libopcuabinary_a-binary_view.o: src/binary_view.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libopcuabinary_a-binary_view.o -MD -MP -MF $(DEPDIR)/libopcuabinary_a-binary_view.Tpo -c -o libopcuabinary_a-binary_view.o `test -f 'src/binary_view.cpp' || echo '$(srcdir)/'`src/binary_view.cpp
 @am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libopcuabinary_a-binary_view.Tpo $(DEPDIR)/libopcuabinary_a-binary_view.Po
@@ -658,6 +645,20 @@ libopcuabinary_a-binary_secure_channel.obj: src/binary_secure_channel.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/binary_secure_channel.cpp' object='libopcuabinary_a-binary_secure_channel.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libopcuabinary_a-binary_secure_channel.obj `if test -f 'src/binary_secure_channel.cpp'; then $(CYGPATH_W) 'src/binary_secure_channel.cpp'; else $(CYGPATH_W) '$(srcdir)/src/binary_secure_channel.cpp'; fi`
+
+libopcuabinary_a-nodeid.o: src/nodeid.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libopcuabinary_a-nodeid.o -MD -MP -MF $(DEPDIR)/libopcuabinary_a-nodeid.Tpo -c -o libopcuabinary_a-nodeid.o `test -f 'src/nodeid.cpp' || echo '$(srcdir)/'`src/nodeid.cpp
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libopcuabinary_a-nodeid.Tpo $(DEPDIR)/libopcuabinary_a-nodeid.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/nodeid.cpp' object='libopcuabinary_a-nodeid.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libopcuabinary_a-nodeid.o `test -f 'src/nodeid.cpp' || echo '$(srcdir)/'`src/nodeid.cpp
+
+libopcuabinary_a-nodeid.obj: src/nodeid.cpp
+@am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT libopcuabinary_a-nodeid.obj -MD -MP -MF $(DEPDIR)/libopcuabinary_a-nodeid.Tpo -c -o libopcuabinary_a-nodeid.obj `if test -f 'src/nodeid.cpp'; then $(CYGPATH_W) 'src/nodeid.cpp'; else $(CYGPATH_W) '$(srcdir)/src/nodeid.cpp'; fi`
+@am__fastdepCXX_TRUE@	$(am__mv) $(DEPDIR)/libopcuabinary_a-nodeid.Tpo $(DEPDIR)/libopcuabinary_a-nodeid.Po
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='src/nodeid.cpp' object='libopcuabinary_a-nodeid.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(libopcuabinary_a_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o libopcuabinary_a-nodeid.obj `if test -f 'src/nodeid.cpp'; then $(CYGPATH_W) 'src/nodeid.cpp'; else $(CYGPATH_W) '$(srcdir)/src/nodeid.cpp'; fi`
 
 opc_ua_binary_test-binary_deserialize.o: tests/binary_deserialize.cpp
 @am__fastdepCXX_TRUE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(opc_ua_binary_test_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT opc_ua_binary_test-binary_deserialize.o -MD -MP -MF $(DEPDIR)/opc_ua_binary_test-binary_deserialize.Tpo -c -o opc_ua_binary_test-binary_deserialize.o `test -f 'tests/binary_deserialize.cpp' || echo '$(srcdir)/'`tests/binary_deserialize.cpp
